src/Domain/Compiler/Tests/Expression/IntegerLiteral/DecimalLiteral/__Baselines__/DecimalLiteral_S32Overflow-StashIr.error
error: Value exceeds max limit of 's32'.
--> main.hs:7:16
  | 
7 |         return 2147483648;
  |                ^^^^^^^^^^
